--- a/css/components/invoice.less
+++ b/css/components/invoice.less
@@ -155,7 +155,6 @@
   .invoiceHeader{
     margin-bottom: 50px;
     .logo{
-      width: 50%;
       display: inline-block;
       vertical-align: top;
       img{
@@ -165,12 +164,11 @@
     }
   
     .logoInfo{
-      width: 151px;
       font-size: 10px;
       line-height: 10px;
-      position: absolute;
-      left: 245px;
-      top: 19px;
+      position: relative;
+      left: 45px;
+      top: 13px;
       display: inline-block;
       vertical-align: top;
       span{
@@ -185,7 +183,7 @@
     .factura{
       vertical-align: top;
       display: inline-block;
-      width: 49%;
+      float: right;
       text-align: right;
       span{display: block;}
     
@@ -207,7 +205,7 @@
   }  
   
   .cliente{
-    width: 76%;
+    width: 73%;
     display: inline-block;
     span{ display:block; line-height: 13px;font-size: 14px;}
     img{
