--- a/public/application.css
+++ b/public/application.css
@@ -1039,7 +1039,7 @@ td.center{text-align:center;}
 @media (max-width:2100px){body{padding-top:75px;}}@media (max-width:940px){.appCanvas{padding-top:40px;} .toolbar{width:100%;height:45px;position:absolute;border-radius:4px;border-color:#d5d5d5;border-width:0 0 1px;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#dfdfdf;-webkit-box-shadow:inset 0 1px 0 #ffffff,0 1px 5px rgba(0, 0, 0, 0.1);-moz-box-shadow:inset 0 1px 0 #ffffff,0 1px 5px rgba(0, 0, 0, 0.1);box-shadow:inset 0 1px 0 #ffffff,0 1px 5px rgba(0, 0, 0, 0.1);z-index:900;} .toolbar .input_wrapper{margin-top:2px;padding-left:10px;width:95%;}}.marginLess{margin:0px;}
 .withMarginLeft{margin-left:10px;}
 .withMarginBottom{margin-bottom:10px !important;}
-.withMarginTop{margin-bottom:5px !important;}
+.withMarginTop{margin-top:5px !important;}
 .withMargin{margin:7px;}
 .display_inlineBlock{display:inline-block !important;}
 .inlineBlock{display:inline-block !important;}
