--- a/css/components/invoice.less
+++ b/css/components/invoice.less
@@ -324,6 +324,7 @@
   
   .transporte{
     width: 72%;
+    height: 65px;
     margin-top: 7px;
     margin-right: 10px;
     border-top: #000 1px solid; 
@@ -331,8 +332,8 @@
     display: inline-block;
     vertical-align: top;
     img{ float: left; margin-right: 8px; display: inline-block; width: 68px; }
-    .transportadoPor{ font-size: 15px ;padding-top: 4px;}
-    .observaciones{ font-size: 15px; }
+    .transportadoPor{ font-size: 15px ;padding-top: 4px;margin:0px;}
+    .observaciones{ font-size: 15px; margin:0px;}
   }
   
   .totales{
