--- a/css/index.less
+++ b/css/index.less
@@ -11,6 +11,7 @@
 @import "./components/printHeader.less";
 @import "./components/print.less";
 @import "./components/mobileList.less";
+@import "./components/whiteList.less";
 @import "./components/smartProductos.less";
 @import "./components/clientes.less";
 @import "./components/toggleButtons.less";
