--- a/public/application.css
+++ b/public/application.css
@@ -886,6 +886,8 @@ footer a{margin-top:15px;color:#049cdb;}footer a i{vertical-align:middle;font-si
 .mobileList>li:last-child{-webkit-border-radius:0px 0px 4px 4px;-moz-border-radius:0px 0px 4px 4px;border-radius:0px 0px 4px 4px;}
 .mobileList>li.inactive{background-color:#6f6f6f;opacity:0.9;}
 .mobileList>li input{margin:0px;}
+.whiteList{margin-bottom:0px;}.whiteList .whiteList{margin:5px 0px;}
+.whiteList>li{margin-bottom:10px;margin-top:10px;padding-bottom:10px;border-bottom:1px solid #ddd;}
 .smartProductos{position:relative;}.smartProductos .js_cliente_search{width:100%;}
 .smartProductos .smartProductos_list{max-height:260px;overflow-y:scroll;background-color:#fff;opacity:1;top:70px;left:0px;z-index:66;border:1px solid #ccc;width:100%;}
 .smartProductos .smartProductos_list li{cursor:pointer;height:50px;border-bottom:1px solid #ded;margin:1px 2px 1px 4px;}.smartProductos .smartProductos_list li:first-child{margin:1px 2px 1px 4px;}
