add saldos to ex cuenta

--- a/css/general.less
+++ b/css/general.less
@@ -185,3 +185,12 @@ td.center{
   user-select: none;
 }
 
+.nav-pills{
+  li{
+    &.active{
+      a.orange{
+        background-color: @blueDark !important;
+      }
+    }
+  }
+}
