--- a/public/application.css
+++ b/public/application.css
@@ -1038,6 +1038,7 @@ td.center{text-align:center;}
 .widgetHeader .rightOptions .dropdownContainer{padding:15px;}.widgetHeader .rightOptions .dropdownContainer a{color:#fff !important;}
 .widgetHeader+.well{margin-top:0px;margin-bottom:0px;background-color:#fff;padding:20px 15px 15px;background:white;border:1px solid #D5D5D5;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:0px 5px 5px 0px;border-image:initial;}
 [draggable]{-moz-user-select:none;-khtml-user-select:none;-webkit-user-select:none;user-select:none;}
+.nav-pills li.active a.orange{background-color:#0064cd !important;}
 @media (max-width:2100px){body{padding-top:75px;}}@media (max-width:940px){.appCanvas{padding-top:40px;} .toolbar{width:100%;height:45px;position:absolute;border-radius:4px;border-color:#d5d5d5;border-width:0 0 1px;-webkit-border-radius:0;-moz-border-radius:0;border-radius:0;background-color:#dfdfdf;-webkit-box-shadow:inset 0 1px 0 #ffffff,0 1px 5px rgba(0, 0, 0, 0.1);-moz-box-shadow:inset 0 1px 0 #ffffff,0 1px 5px rgba(0, 0, 0, 0.1);box-shadow:inset 0 1px 0 #ffffff,0 1px 5px rgba(0, 0, 0, 0.1);z-index:900;} .toolbar .input_wrapper{margin-top:2px;padding-left:10px;width:95%;}}.marginLess{margin:0px;}
 .withMarginLeft{margin-left:10px;}
 .withMarginBottom{margin-bottom:10px !important;}
