--- a/css/components/invoice.less
+++ b/css/components/invoice.less
@@ -4,7 +4,7 @@
 .invoice{
   position: relative;
   -webkit-print-color-adjust: exact;
-  
+
 
   .original{
     height: 890px;
@@ -89,6 +89,10 @@
   .copy{
     height: 880px;  
     color: #000;
+    
+    &.noHeight{
+      height: auto;
+    }
     
     &:last-child{
       height: 809px;
