--- a/css/components/whiteList.less
+++ b/css/components/whiteList.less
@@ -10,6 +10,13 @@
    margin-top: 10px;
    padding-bottom: 10px;
    border-bottom: 1px solid #ddd;
+   
+   &.smallMargin{
+    margin-bottom: 0px;
+    margin-top: 3px;
+    padding-bottom: 6px;
+   }
+   
   }
 
 }
