--- a/css/helpers.less
+++ b/css/helpers.less
@@ -68,6 +68,10 @@
   vertical-align:top;
 }
 
+.alignMiddle{
+  vertical-align: middle;
+}
+
 .alignLeft{
   text-align: left;
 }
@@ -79,7 +83,6 @@
 .pull-right {
   float: right !important;
 }
-
 
 .blueRodco{
   color: @blueRodco;
