--- a/public/application.css
+++ b/public/application.css
@@ -877,7 +877,7 @@ footer a{margin-top:15px;color:#049cdb;}footer a i{vertical-align:middle;font-si
 .printHeader .table-main td{padding:12px;}
 .printHeader .table-inner{width:100%;}.printHeader .table-inner td{padding:5px 15px;}
 .show_print{display:none;}
-@media print{body{margin:0px;padding:0px;max-width:800px;background:none;-webkit-print-color-adjust:exact;}body header,body footer{display:none;} body img{border:none !important;outline:none !important;} body{padding-top:0px;background:none;background-color:#fff;} body .navbar,body .action_footer{display:none;} .table-striped tbody tr:nth-child(odd) td,.table-striped tbody tr:nth-child(odd) th{background-color:none;} .show_print{display:block;} .hide_print{display:none;} .action_footer,.hide_on_print{display:none;}}.mobileList{margin-bottom:0px;}.mobileList .mobileList{margin:5px 0px;}
+@media print{.pageBreakAfter{page-break-after:always;} body{margin:0px;padding:0px;max-width:800px;background:none;-webkit-print-color-adjust:exact;}body header,body footer{display:none;} body img{border:none !important;outline:none !important;} body{padding-top:0px;background:none;background-color:#fff;} body .navbar,body .action_footer{display:none;} .table-striped tbody tr:nth-child(odd) td,.table-striped tbody tr:nth-child(odd) th{background-color:none;} .show_print{display:block;} .hide_print{display:none;} .action_footer,.hide_on_print{display:none;}}.mobileList{margin-bottom:0px;}.mobileList .mobileList{margin:5px 0px;}
 .mobileList>li{background-color:#555555;padding:8px;padding:4px 10px 4px;margin-bottom:0;font-size:13px;line-height:18px;*line-height:20px;color:#333333;text-shadow:0 1px 1px rgba(255, 255, 255, 0.75);vertical-align:middle;background-color:#f5f5f5;background-image:-moz-linear-gradient(top, #ffffff, #e6e6e6);background-image:-ms-linear-gradient(top, #ffffff, #e6e6e6);background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));background-image:-webkit-linear-gradient(top, #ffffff, #e6e6e6);background-image:-o-linear-gradient(top, #ffffff, #e6e6e6);background-image:linear-gradient(top, #ffffff, #e6e6e6);background-repeat:repeat-x;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);border-color:#e6e6e6 #e6e6e6 #bfbfbf;border-color:rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);*background-color:#e6e6e6;filter:progid:DXImageTransform.Microsoft.gradient(enabled = false);border:1px solid #cccccc;-webkit-box-shadow:inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);-moz-box-shadow:inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);box-shadow:inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);}.mobileList>li:hover,.mobileList>li:active,.mobileList>li.active,.mobileList>li.disabled,.mobileList>li[disabled]{background-color:#e6e6e6;*background-color:#d9d9d9;}
 .mobileList>li:active,.mobileList>li.active{background-color:#cccccc \9;}
 .mobileList>li.header{background-color:#0074cc;background-image:-moz-linear-gradient(top, #0088cc, #0055cc);background-image:-ms-linear-gradient(top, #0088cc, #0055cc);background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0055cc));background-image:-webkit-linear-gradient(top, #0088cc, #0055cc);background-image:-o-linear-gradient(top, #0088cc, #0055cc);background-image:linear-gradient(top, #0088cc, #0055cc);background-repeat:repeat-x;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#0088cc', endColorstr='#0055cc', GradientType=0);border-color:#0055cc #0055cc #003580;border-color:rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);*background-color:#0055cc;filter:progid:DXImageTransform.Microsoft.gradient(enabled = false);color:#fff;}.mobileList>li.header:hover,.mobileList>li.header:active,.mobileList>li.header.active,.mobileList>li.header.disabled,.mobileList>li.header[disabled]{background-color:#0055cc;*background-color:#004ab3;}
@@ -887,7 +887,7 @@ footer a{margin-top:15px;color:#049cdb;}footer a i{vertical-align:middle;font-si
 .mobileList>li.inactive{background-color:#6f6f6f;opacity:0.9;}
 .mobileList>li input{margin:0px;}
 .whiteList{margin-bottom:0px;}.whiteList .whiteList{margin:5px 0px;}
-.whiteList>li{margin-bottom:10px;margin-top:10px;padding-bottom:10px;border-bottom:1px solid #ddd;}
+.whiteList>li{margin-bottom:10px;margin-top:10px;padding-bottom:10px;border-bottom:1px solid #ddd;}.whiteList>li.smallMargin{margin-bottom:0px;margin-top:3px;padding-bottom:6px;}
 .smartProductos{position:relative;}.smartProductos .js_cliente_search{width:100%;}
 .smartProductos .smartProductos_list{max-height:260px;overflow-y:scroll;background-color:#fff;opacity:1;top:70px;left:0px;z-index:66;border:1px solid #ccc;width:100%;}
 .smartProductos .smartProductos_list li{cursor:pointer;height:50px;border-bottom:1px solid #ded;margin:1px 2px 1px 4px;}.smartProductos .smartProductos_list li:first-child{margin:1px 2px 1px 4px;}
@@ -952,7 +952,8 @@ footer a{margin-top:15px;color:#049cdb;}footer a i{vertical-align:middle;font-si
 .invoice .original .invoiceFooter .detalles{color:#ef4034;}
 .invoice .original .invoiceFooter div p{color:#333333;}
 .invoice .original .invoiceFooter div .title{color:#555;}
-.invoice .copy{height:880px;color:#000;}.invoice .copy:last-child{height:809px;}
+.invoice .copy{height:880px;color:#000;}.invoice .copy.noHeight{height:auto;}
+.invoice .copy:last-child{height:809px;}
 .invoice .copy .hide_on_copy{display:none;}
 .invoice .copy .show_on_copy{display:inline-block;}
 .invoice .copy .logoInfo{color:#000;}.invoice .copy .logoInfo strong{color:#000;}
@@ -1054,6 +1055,7 @@ td.center{text-align:center;}
 .rounded{-webkit-border-radius:5px;-moz-border-radius:5px;border-radius:5px;}
 .input-nice{font-size:15px !important;padding:4px !important;font-weight:100 !important;height:auto !important;}.input-nice.large{font-size:25px !important;padding:7px !important;}
 .alignTop{vertical-align:top;}
+.alignMiddle{vertical-align:middle;}
 .alignLeft{text-align:left;}
 .relative{position:relative;}
 .pull-right{float:right !important;}
