--- a/css/helpers.less
+++ b/css/helpers.less
@@ -87,3 +87,15 @@
 .blueRodco{
   color: @blueRodco;
 }
+
+.green{
+  color: @green;
+}
+
+.red{
+  color: @red;
+}
+
+.yellow{
+  color: @yellow;
+}
