--- a/public/application.css
+++ b/public/application.css
@@ -1064,6 +1064,9 @@ td.center{text-align:center;}
 .relative{position:relative;}
 .pull-right{float:right !important;}
 .blueRodco{color:#3d5c95;}
+.green{color:#46a546;}
+.red{color:#9d261d;}
+.yellow{color:#ffc40d;}
 body .container{max-width:980px;}
 *{-webkit-tap-highlight-color:rgba(0, 0, 0, 0);}
 @media (max-width:979px){header .navbar-fixed-top{margin-bottom:10px;} header .productIcon{display:none;} .productosToolbar{position:static;max-height:390px;} .appCanvas{margin-top:0px;}}
