add cliente info

--- a/css/components/header.less
+++ b/css/components/header.less
@@ -1,8 +1,13 @@
 header{
 
+  .navbar{
+    background-color: #fff;
+  }
+
  .navbar-inner{ 
-  padding: 0px 0px;
-    background-image: url("/images/furley_bg.png");
+    padding: 0px 0px;
+    background: none;
+    border-bottom: 1px solid #777;
   }
 
   .headerWrapper{
@@ -52,7 +57,7 @@ header{
     .actionButtons{
       padding-top: 10px;
       a{
-        color: #fff;
+        color: @green;
         display: inline-block;
         margin: 0px;
         padding-right: 0px;
