--- a/css/index.less
+++ b/css/index.less
@@ -16,6 +16,8 @@
 @import "./components/clientes.less";
 @import "./components/toggleButtons.less";
 @import "./components/invoice.less";
+@import "./components/clienteCanvas.less";
+@import "./components/dashboard.less";
 
 
 @import "./general.less";
