--- a/css/helpers.less
+++ b/css/helpers.less
@@ -10,6 +10,10 @@
   margin-bottom: 10px !important;
 }
 
+.withoutMarginBottom{
+  margin-bottom: 0px !important;
+}
+
 .withMarginTop{
   margin-top: 5px !important;
 }
